tests/test_files/initialization_inference/move_part_use_whole.lark
//~ execute:no

struct Foo { x: uint }
struct Bar { foo: Foo }

def main() {
  let bar = Bar(foo: Foo(x: 22))
  take_foo(bar.foo)
  take_bar(bar)
  //~ ERROR: access to uninitialized path
}

def take_bar(v: Bar) { }

def take_foo(v: Foo) { }
